feat: mongo 数据库操作 模块

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "postgresql"]
 	path = postgresql
 	url = https://github.com/xizher/postgresql.git
+[submodule "mongodb"]
+	path = mongodb
+	url = https://github.com/xizher/mongodb.git
